SubVersion: $Id: ChangeLog 1826 2006-02-09 20:48:04Z roms $

Log:

- 10/06/2007, version 1.0.3: roms
	- fixed translation of Pic/Gdb/StrX variable names (TI84+/USB)
	- fixed translation of Y? variable names (TI84+/USB)
	- added catching of some critical errors

- 02/04/2006, version 1.0.2: kevinkofler
	- fixed sed invocation in makefile for NetBSD (patch by Jukka Salmi)

- 13/10/2006, version 1.0.1: roms
	- don't include <iconv.h> if the iconv-compatible interface is disabled

- 19/09/2006, version 1.0.0: roms
	- export iconv emulation interface only if TICONV_ICONV_INTERFACE is defined (kevin's request)
	- changed TIEXPORT into TIEXPORT4

- 12/09/2006, version 0.0.6: roms
	- fixed buffer overflow in ticonv_charset_utf16_to_ti
	- implemented ticonv_utf16_to_ti89tusb call
	- added support for TILIBS_DEPRECATED (exports symbols which have been tagged as deprecated)

- 07/07/2006, version 0.0.5: roms
	- added 0x5d0x40 => IDList detokenization (TI84+)
	- added ticonv_gfe_to_zfe for TiGroup support (ZIP archives don't like greek chars)
	- fixed an error in the 68k charset tables, also one less difference from TI's (kevin)

- 05/06/2006, version 0.0.4: roms
	- renamed stdints.h into stdints4.h
	
- 07/04/2006, version 0.0.3: roms
	- added support of the new TI84+ & TItanium USB hand-helds.
	- increased SO major number due to API changes

- 27/03/2006, version 0.0.2: kevinkofler
	- added iconv.c for an iconv-compatible interface

- 11/02/2006, version 0.0.1: roms
	- creation of library (idea suggested by Kevin Kofler)
	- imported code from TiEmu (Kevin's ticonv.c) and tifiles2 (Romain's transcode.c)